@@ -15,6 +15,7 @@ import javax.servlet.ServletException;
 
 import org.csstudio.archive.common.engine.ArchiveEngineActivator;
 import org.csstudio.archive.common.engine.model.EngineModel;
+import org.csstudio.archive.common.engine.service.IServiceProvider;
 import org.eclipse.equinox.http.jetty.JettyConfigurator;
 import org.osgi.framework.BundleContext;
 import org.osgi.framework.InvalidSyntaxException;
@@ -32,8 +33,7 @@ import org.slf4j.LoggerFactory;
 public class EngineHttpServer {
     private static final String EX_MSG = "Engine HTTP server could not be instantiated.";
 
-    private static final Logger LOG =
-        LoggerFactory.getLogger(EngineHttpServer.class);
+    private static final Logger LOG = LoggerFactory.getLogger(EngineHttpServer.class);
 
     private String _pid;
 
@@ -41,34 +41,27 @@ public class EngineHttpServer {
 
     /** Construct and start the server
      *  @param model Model to serve
-     *  @param port TCP port
+     *  @param provider TCP port
      * @throws EngineHttpServerException
      * @throws InvalidSyntaxException
      * @throws
      *  @throws Exception on error
      */
     public EngineHttpServer(@Nonnull final EngineModel model,
-                            final int port) throws EngineHttpServerException {
+                            @Nonnull final IServiceProvider provider) throws EngineHttpServerException {
         final BundleContext context =
             ArchiveEngineActivator.getDefault().getBundle().getBundleContext();
         HttpService httpService;
         try {
+            final Integer port = model.getHttpPort();
+            if (port == null) {
+                throw new EngineHttpServerException("Port is not present in model. HTTP server couldn't be started.", null);
+            }
             httpService = createHttpService(context, port);
 
-            final HttpContext httpContext = httpService.createDefaultHttpContext();
-            httpService.registerResources("/", "/webroot", httpContext);
+            createContextAndRegisterServlets(model, provider, httpService);
 
-            httpService.registerServlet("/main", new MainResponse(model), null, httpContext);
-            httpService.registerServlet("/groups", new GroupsResponse(model), null, httpContext);
-            httpService.registerServlet("/disconnected", new DisconnectedResponse(model), null, httpContext);
-            httpService.registerServlet("/group", new GroupResponse(model), null, httpContext);
-            httpService.registerServlet("/channel", new ChannelResponse(model), null, httpContext);
-            httpService.registerServlet("/channels", new ChannelListResponse(model), null, httpContext);
-            httpService.registerServlet("/environment", new EnvironmentResponse(model), null, httpContext);
-            httpService.registerServlet("/restart", new RestartResponse(model), null, httpContext);
-            httpService.registerServlet("/reset", new ResetResponse(model), null, httpContext);
-            httpService.registerServlet("/stop", new StopResponse(model), null, httpContext);
-            httpService.registerServlet("/debug", new DebugResponse(model), null, httpContext);
+            LOG.info("Engine HTTP Server port: {}", port);
 
         } catch (final InvalidSyntaxException e) {
             throw new EngineHttpServerException(EX_MSG, e);
@@ -79,7 +72,55 @@ public class EngineHttpServer {
         } catch (final Exception e) {
             throw new EngineHttpServerException(EX_MSG, e);
         }
-        LOG.info("Engine HTTP Server port " + port);
+    }
+
+    private void createContextAndRegisterServlets(@Nonnull final EngineModel model,
+                                                  @Nonnull final IServiceProvider provider,
+                                                  @Nonnull final HttpService httpService) throws NamespaceException, ServletException {
+        final HttpContext httpContext = httpService.createDefaultHttpContext();
+        httpService.registerResources("/", "/webroot", httpContext);
+
+        httpService.registerServlet("/main", new MainResponse(model, provider.getPreferencesService().getVersion()), null, httpContext);
+        httpService.registerServlet("/groups", new GroupsResponse(model), null, httpContext);
+        httpService.registerServlet("/disconnected", new DisconnectedResponse(model), null, httpContext);
+
+        httpService.registerServlet(ShowGroupResponse.getUrl(),
+                                    new ShowGroupResponse(model),
+                                    null, httpContext);
+        httpService.registerServlet(StartGroupResponse.getUrl(),
+                                    new StartGroupResponse(model),
+                                    null, httpContext);
+        httpService.registerServlet(StopGroupResponse.getUrl(),
+                                    new StopGroupResponse(model),
+                                    null, httpContext);
+        httpService.registerServlet(AddGroupResponse.getUrl(),
+                                    new AddGroupResponse(model),
+                                    null, httpContext);
+
+
+        httpService.registerServlet("/channels", new ChannelListResponse(model), null, httpContext);
+        httpService.registerServlet("/environment", new EnvironmentResponse(model), null, httpContext);
+        httpService.registerServlet("/restart", new RestartResponse(model), null, httpContext);
+        httpService.registerServlet("/reset", new ResetResponse(model), null, httpContext);
+        httpService.registerServlet("/stop", new StopEngineResponse(model), null, httpContext);
+
+        httpService.registerServlet(ShowChannelResponse.getUrl(),
+                                    new ShowChannelResponse(model),
+                                    null, httpContext);
+        httpService.registerServlet(StartChannelResponse.getUrl(),
+                                    new StartChannelResponse(model),
+                                    null, httpContext);
+        httpService.registerServlet(StopChannelResponse.getUrl(),
+                                    new StopChannelResponse(model),
+                                    null, httpContext);
+        httpService.registerServlet(AddChannelResponse.getUrl(),
+                                    new AddChannelResponse(model),
+                                    null, httpContext);
+        httpService.registerServlet(RemoveChannelResponse.getUrl(),
+                                    new RemoveChannelResponse(model),
+                                    null, httpContext);
+
+        httpService.registerServlet("/debug", new DebugResponse(model), null, httpContext);
     }
 
     /** Stop the server */
@@ -99,7 +140,7 @@ public class EngineHttpServer {
         // Create a custom HttpService
         // avoid the auto-started instance
         final Dictionary<String, Object> dictionary = new Hashtable<String, Object>();
-        dictionary.put("http.port", new Integer(port));
+        dictionary.put("http.port", Integer.valueOf(port));
         dictionary.put("other.info", _pid);
 
         JettyConfigurator.startServer(_pid, dictionary);
